--- a/bb1_hw/package.xml
+++ b/bb1_hw/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>bb1_hardware</name>
+  <name>bb1_hw</name>
   <version>0.0.0</version>
-  <description>The bb1_hardware package</description>
+  <description>The bb1_hw package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/bb1_hardware</url> -->
+  <!-- <url type="website">http://wiki.ros.org/bb1_hw</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -50,6 +50,17 @@
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>roscpp</build_depend>
+  <build_depend>controller_manager</build_depend>
+  <build_depend>hardware_interface</build_depend>
+  <build_depend>vesc_driver</build_depend>
+  <build_depend>vesc_msgs</build_depend>
+
+  <exec_depend>roscpp</exec_depend>
+  <exec_depend>controller_manager</exec_depend>
+  <exec_depend>hardware_interface</exec_depend>
+  <exec_depend>vesc_driver</exec_depend>
+  <exec_depend>vesc_msgs</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
