--- a/bb1_bringup/config/mydiffdrive.yaml
+++ b/bb1_bringup/config/mydiffdrive.yaml
@@ -1,8 +1,8 @@
 type: "diff_drive_controller/DiffDriveController"
 publish_rate: 50
 
-left_wheel: ['base_to_left_front_wheel_joint', 'base_to_left_back_wheel_joint']
-right_wheel: ['base_to_right_front_wheel_joint', 'base_to_right_back_wheel_joint']
+left_wheel: ['front_left_wheel_joint', 'back_left_wheel_joint']
+right_wheel: ['front_right_wheel_joint', 'back_right_wheel_joint']
 
 wheel_separation: 0.29
 
