--- a/bb1_bringup/config/mydiffdrive.yaml
+++ b/bb1_bringup/config/mydiffdrive.yaml
@@ -21,9 +21,12 @@ cmd_vel_timeout: 0.25
 # to start
 pose_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
 twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
+# pose_covariance_diagonal : [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
+# twist_covariance_diagonal: [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
+
 
 #this could be the holy grail:
-publish_wheel_joint_controller_state: true
+publish_wheel_joint_controller_state: false
 
 # Top level frame (link) of the robot description
 base_frame_id: base_link
@@ -33,15 +36,15 @@ linear:
   x:
     has_velocity_limits    : true
     #max_velocity           : 1.0     # m/s
-    max_velocity           : 2.0    # m/s
+    max_velocity           : 1.0    # m/s
     has_acceleration_limits: true
     #max_acceleration       : 0.6   # m/s^2
-    max_acceleration       : 1.0   # m/s^2
+    max_acceleration       : 35.0   # m/s^2 (for some reason, multiply the one you want by around 35)
 angular:
   z:
     has_velocity_limits    : true
     #max_velocity           : 1.0   # rad/s
-    max_velocity           : 1.0   # rad/s
+    max_velocity           : 2.0   # rad/s
     has_acceleration_limits: true
     #max_acceleration       : 2.0   # rad/s^2
-    max_acceleration       : 2.0   # rad/s^2
+    max_acceleration       : 70.0   # rad/s^2
