--- a/bb1_bringup/config/mydiffdrive.yaml
+++ b/bb1_bringup/config/mydiffdrive.yaml
@@ -4,7 +4,7 @@ publish_rate: 50
 left_wheel: ['front_left_wheel_joint', 'back_left_wheel_joint']
 right_wheel: ['front_right_wheel_joint', 'back_right_wheel_joint']
 
-wheel_separation: 0.29
+wheel_separation: 0.32
 
 cmd_vel_timeout: 0.25
 
@@ -14,7 +14,7 @@ cmd_vel_timeout: 0.25
 
 # Odometry fused with IMU is published by robot_localization, so
   # no need to publish a TF based on encoders alone.
-#enable_odom_tf: false
+enable_odom_tf: false
 
 # Odometry covariances for the encoder output of the robot. These values should
 # be tuned to your robot's sample odometry data, but these values are a good place
@@ -25,7 +25,7 @@ pose_covariance_diagonal: [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0
 twist_covariance_diagonal: [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
 
 #this could be the holy grail:
-publish_wheel_joint_controller_state: true
+publish_wheel_joint_controller_state: false
 
 # Top level frame (link) of the robot description
 base_frame_id: base_link
@@ -51,7 +51,7 @@ base_frame_id: base_link
 linear:
   x:
     has_velocity_limits    : true
-    max_velocity           : 0.3  # m/s
+    max_velocity           : 1.0  # m/s
     # min_velocity           : -0.3 # m/s
     has_acceleration_limits: true
     max_acceleration       : 5.0  # m/s^2 35 is nice
@@ -63,6 +63,6 @@ angular:
     has_velocity_limits    : true
     max_velocity           : 2.0  # rad/s
     has_acceleration_limits: true
-    max_acceleration       : 10.0  # rad/s^2 70 is nice
+    max_acceleration       : 20.0  # rad/s^2 70 is nice
     # has_jerk_limits        : true
     # max_jerk               : 2.5  # rad/s^3
