--- a/bb1_bringup/config/mydiffdrive.yaml
+++ b/bb1_bringup/config/mydiffdrive.yaml
@@ -24,8 +24,8 @@ enable_odom_tf: false
 pose_covariance_diagonal: [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
 twist_covariance_diagonal: [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
 
-#this could be the holy grail:
-publish_wheel_joint_controller_state: false
+# Keep this published for rviz
+publish_wheel_joint_controller_state: true
 
 # Top level frame (link) of the robot description
 base_frame_id: base_link
@@ -54,7 +54,7 @@ linear:
     max_velocity           : 1.0  # m/s
     # min_velocity           : -0.3 # m/s
     has_acceleration_limits: true
-    max_acceleration       : 22.0  # m/s^2 (22 ~= 1)
+    max_acceleration       : 40.0  # m/s^2 (22 ~= 1)
     # min_acceleration       : -35.0 # m/s^2
     # has_jerk_limits        : true
     # max_jerk               : 5.0  # m/s^3
@@ -63,6 +63,6 @@ angular:
     has_velocity_limits    : true
     max_velocity           : 2.0  # rad/s
     has_acceleration_limits: true
-    max_acceleration       : 88.0  # rad/s^2 (22 ~= 1)
+    max_acceleration       : 160.0  # rad/s^2 (22 ~= 1)
     # has_jerk_limits        : true
     # max_jerk               : 2.5  # rad/s^3
