--- a/bb1_2dnavigation/config/base_local_planner_params.yaml
+++ b/bb1_2dnavigation/config/base_local_planner_params.yaml
@@ -1,10 +1,14 @@
 TrajectoryPlannerROS:
   max_vel_x: 0.4
-  min_vel_x: 0.0
+  min_vel_x: 0.2
   max_vel_theta: 1
   min_in_place_vel_theta: 1
 
-  acc_lim_theta: 0.75
-  acc_lim_x: 0.1
+  acc_lim_theta: 0.5
+  acc_lim_x: 0.05
 
   holonomic_robot: false
+
+  xy_goal_tolerance: 0.2
+  yaw_goal_tolerance: 0.3
+  latch_xy_goal_tolerance: true
