--- a/bb1_2dnavigation/config/costmap_common_params.yaml
+++ b/bb1_2dnavigation/config/costmap_common_params.yaml
@@ -2,7 +2,8 @@ obstacle_range: 2.5
 raytrace_range: 3.0
 footprint: [[-0.18, -0.2], [-0.18, 0.2], [0.18, 0.2], [0.18, -0.2]]
 #robot_radius: ir_of_robot
-inflation_radius: 0.6
+inflation_radius: 1.0
+#was 0.6
 
 observation_sources: laser_scan_sensor
 
