--- a/bb1_bringup/config/mydiffdrive.yaml
+++ b/bb1_bringup/config/mydiffdrive.yaml
@@ -21,7 +21,7 @@ enable_odom_tf: false
 # to start
 #pose_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
 #twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
-pose_covariance_diagonal: [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
+pose_covariance_diagonal: [0.001, 0.001, 10000.0, 10000.0, 10000.0, 10.0]
 twist_covariance_diagonal: [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
 
 # Keep this published for rviz
