--- a/bb1_bringup/CMakeLists.txt
+++ b/bb1_bringup/CMakeLists.txt
@@ -7,7 +7,9 @@ project(bb1_bringup)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED)
+find_package(catkin REQUIRED COMPONENTS
+	gazebo_ros_control
+)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
